--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "html-str-replace",
   "version": "1.0.1",
   "description": "replace string for html",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/hansinhu/npm-HtmlStrRep/issues"
   },
-  "homepage": "https://github.com/hansinhu/npm-HtmlStrRep#readme"
+  "homepage": "https://github.com/hansinhu/npm-HtmlStrRep#readme",
+  "dependencies": {
+    "es2015": "0.0.0",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13"
+  }
 }
