--- a/package.json
+++ b/package.json
@@ -23,10 +23,5 @@
     "url": "https://github.com/hansinhu/npm-HtmlStrRep/issues"
   },
   "homepage": "https://github.com/hansinhu/npm-HtmlStrRep#readme",
-  "dependencies": {
-    "es2015": "0.0.0",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13"
-  }
+  "dependencies": {}
 }
